--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col-12 col-lg-6 py-3 px-4">
                 <img class="d-block w-100" src="images/mac.png" alt="">
             </div>
-            <div class="col-12 col-lg-6 pt-4 px-4">
+            <div id="Buttons" class="col-12 col-lg-6 pt-4 px-4">
                 <h1>Customize your Blue 24-inch iMac with Apple M1 chip.</h1>
                 <p>Apple in November 2020 released the first Macs with an Arm-based M1 chip, debuting new 2020
                     13-inch
@@ -30,26 +30,30 @@
                 <div>
                     <h4 class="mt-5 pb-2">Memory</h4>
                     <div class="btn-group" role="group" aria-label="Basic outlined example">
-                        <button type="button" class="btn btn-outline-dark mx-2 ">8GB unified Memory</button>
-                        <button type="button" class="btn btn-outline-dark">16GB unified Memory</button>
+                        <button id="8Gb-btn" type="button" class="btn btn-outline-dark mx-2 ">8GB unified
+                            Memory</button>
+                        <button id="16Gb-btn" type="button" class="btn btn-outline-dark">16GB unified Memory</button>
                     </div>
                 </div>
                 <!-- storage section -->
                 <div>
                     <h4 class="mt-5 pb-2">Storage</h4>
                     <div class="btn-group" role="group" aria-label="Basic outlined example">
-                        <button type="button" class="btn btn-outline-dark mx-2 ">256GB SSD Storage</button>
-                        <button type="button" class="btn btn-outline-dark ">512GB SSD Storage</button>
-                        <button type="button" class="btn btn-outline-dark ms-2">1TB SSD Storage</button>
+                        <button id="256Gb-btn" type="button" class="btn btn-outline-dark mx-2 ">256GB SSD
+                            Storage</button>
+                        <button id="512Gb-btn" type="button" class="btn btn-outline-dark ">512GB SSD Storage</button>
+                        <button id="1Tb-btn" type="button" class="btn btn-outline-dark ms-2">1TB SSD Storage</button>
                     </div>
                 </div>
                 <!-- delevary section -->
                 <div class="mb-5">
                     <h4 class="mt-5 pb-2">Choose Your Delivery Option</h4>
                     <div class="btn-group" role="group" aria-label="Basic outlined example">
-                        <button type="button" class="btn btn-outline-dark mx-2 ">Friday, Aug 25 Free
+                        <button id="free-delivery-btn" type="button" class="btn btn-outline-dark mx-2 ">Friday, Aug 25
+                            Free
                             delivery</button>
-                        <button type="button" class="btn btn-outline-dark">Friday, Aug 21 Charge $20</button>
+                        <button id="cost-delivery-btn" type="button" class="btn btn-outline-dark">Friday, Aug 21 Charge
+                            $20</button>
                     </div>
                 </div>
 
@@ -60,51 +64,53 @@
                             <h5>Best Price</h5>
                         </div>
                         <div class="col-md-4 status">
-                            <h5>$<span>1299</span></h5>
+                            <h5>$<span id="fixed">1299</span></h5>
                         </div>
                         <hr>
                         <div class="col-md-8">
                             <h5>Extra Memory Cost</h5>
                         </div>
                         <div class="col-md-4 status">
-                            <h5>$ <span>0</span></h5>
+                            <h5>$ <span id="extra-memory">0</span></h5>
                         </div>
                         <hr>
                         <div class="col-md-8">
                             <h5>Extra Storage Cost</h5>
                         </div>
                         <div class="col-md-4 status">
-                            <h5>$ <span>0</span></h5>
+                            <h5>$ <span id="extra-storage">0</span></h5>
                         </div>
                         <hr>
                         <div class="col-md-8">
                             <h5>Delivery Charge</h5>
                         </div>
                         <div class="col-md-4 status">
-                            <h5>$ <span>0</span></h5>
+                            <h5>$ <span id="delivery-cost">0</span></h5>
                         </div>
                         <hr class="border border-dark border-3">
                         <div class="col-md-8">
                             <h5>Total Price</h5>
                         </div>
                         <div class="col-md-4 status">
-                            <h5>$ <span>1299</span></h5>
+                            <h5>$<span id="total-price">1299</span></h5>
                         </div>
                         <hr>
                     </div>
                     <h5>Add Pomo code</h5>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="pomo code"
+                        <input id="input-field" type="text" class="form-control" placeholder="pomo code"
                             aria-label="Recipient's username" aria-describedby="button-addon2">
-                        <button class="btn btn-outline-dark" type="button">Apply</button>
+                        <button id="apply-btn" class="btn btn-outline-dark" type="button">Apply</button>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
-        <h1 class="text-center mb-5">Total:$<span>1290</span></h1>
+        <h1 class="text-center mb-5">Total:$<span id="final">1299</span></h1>
     </section>
     </main>
+    <!-- java script added  -->
+    <script src="java.js"></script>
 </body>
 
 </html>
